<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, Ht4adActivity!</string>
    <string name="app_name">Ht4ad</string>
    <string name="btn_as_a_car">I am a car.</string>
    <string name="btn_as_a_hand">I am a hand.</string>
    <string name="select_type">Select a type of client.</string>
    <string name="login">Login</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="forget_account">Forget user/password ?</string>
    <string name="no_account">no account ?</string>
    <string name="menu_item_home">home</string>
    <string name="menu_item_refresh">refresh</string>
    <string name="menu_item_help">help</string>
    <string name="menu_item_exit">exit</string>

</resources>