<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_default"
    android:orientation="vertical" >

    <include
        android:id="@+id/included1"
        layout="@layout/header_bar" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/user_name" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/login" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:background="#00ffffff"
            android:text="@string/no_account"
            android:textColor="@color/text_link" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:background="#00ffffff"
            android:text="@string/forget_account"
            android:textColor="@color/text_link" />
    </LinearLayout>

</LinearLayout>