<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_default"
    android:gravity="center|center_horizontal"
    android:orientation="vertical" >

    <include
        android:id="@+id/included1"
        layout="@layout/header_bar" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_weight="0.2"
        android:gravity="center|center_horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_type"
            android:textColor="#808080"
            android:textSize="16dp" />
    </LinearLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_weight="0.4"
        android:background="@color/bg_car"
        android:text="@string/btn_as_a_car"
        android:textColor="@color/text_car"
        android:textSize="24dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_weight="0.4"
        android:background="@color/bg_hand"
        android:text="@string/btn_as_a_hand"
        android:textColor="@color/text_hand"
        android:textSize="24dp" />

</LinearLayout>